--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=DallasTemperature
+name=allasTemperature-modded-AirysDark
 version=4.0.5
-author=Miles Burton <mail@milesburton.com>, Tim Newsome <nuisance@casualhacker.net>, Guil Barros <gfbarros@bappos.com>, Rob Tillaart <rob.tillaart@gmail.com>
-maintainer=Miles Burton <mail@milesburton.com>
+author=AirysDark <megamanx2sonic@gamil.com>
+maintainer=AirysDark <megamanx2sonic@gamil.com>
 sentence=Arduino library for Dallas/Maxim temperature ICs
 paragraph=Support for DS18B20 and other Dallas/Maxim 1-Wire temperature sensors
 category=Sensors
-url=https://github.com/milesburton/Arduino-Temperature-Control-Library
+url=https://github.com/AirysDark/DallasTemperature-modded-AirysDark
 architectures=*
